Implemented basic operations for working with data.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -1,8 +1,8 @@
 help_add=add – add an entry to the table
 help_bt=bytag <tag> (bt <tag>) – search in the table by tag
 help_bt_eg=bytag <tag> (bt <tag>) – search in the table by tag (e.g. bt g)
-help_cp=copy <id> <note / login / password / tag> (cp <id> <n / l / p / t>) – copy data from the entry
-help_cp_eg=copy <id> <note / login / password / tag> (cp <id> <n / l / p / t>) – copy data from the entry (e.g. cp 7 n)
+help_cp=copy <id> <note / login / password> (cp <id> <n / l / p>) – copy data from the entry
+help_cp_eg=copy <id> <note / login / password> (cp <id> <n / l / p>) – copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
 note = n , login = l , password = p , tag = t
 help_del=delete <id> (del <id>) – delete an entry from the table
