Implemented main functionality (except saving) without protection.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -75,3 +75,11 @@ tg_p=p
 c_add2=add
 msg_lang=English is set for messages.
 msg_unknown=Unknown command.
+msg_namefile=Enter name or path: 
+msg_masterpass=Enter master password (only latin): 
+msg_noentries=< There are no entries >
+msg_notable=First open the table or create a new one.
+edit_note=Enter note: 
+edit_login=Enter login: 
+edit_password=Enter password: 
+edit_tag=Enter tag (red / green / blue / yellow / purple): 
