Added saving and VCS for files.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -83,3 +83,4 @@ edit_note=Enter note:
 edit_login=Enter login: 
 edit_password=Enter password: 
 edit_tag=Enter tag (red / green / blue / yellow / purple): 
+msg_invalid=Invalid command.
