Quit, capitalized command input, new tag question.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -82,5 +82,8 @@ msg_notable=First open the table or create a new one.
 edit_note=Enter note: 
 edit_login=Enter login: 
 edit_password=Enter password: 
-edit_tag=Enter tag (red / green / blue / yellow / purple): 
+edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command.
+help_q=quit (q) – quit the application
+c_quit=quit
+c_q=q
