New table design.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -87,3 +87,10 @@ msg_invalid=Invalid command.
 help_q=quit (q) – quit the application
 c_quit=quit
 c_q=q
+title_id=ID
+title_note=Note
+title_login=Login
+title_password=Password
+title_tag=Tag
+yes=yes
+no=no
