Implemented protection from data loss when closing file.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -95,3 +95,9 @@ title_tag=Tag
 yes=yes
 no=no
 tb_defaulttitle=Untitled
+msg_unsaved=!! Unsaved changes !!\n\
+Type "save" to save changes or type "rollback" to discard all changes.
+c_yes2=y
+c_no2=n
+c_cancel=cancel
+msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
