The beginning of implementation of the protection system against wrong actions.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -101,3 +101,10 @@ c_yes2=y
 c_no2=n
 c_cancel=cancel
 msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
+msg_emptynamefile=Path or file name cannot be empty!
+msg_charerror=File name must not contain the following characters: \\ / : * ? " < > |
+msg_emptymasterpass=Master password cannot be empty!
+msg_slashmasterpass=Unfortunately, master password cannot begin with "/"!
+msg_nonlatin=Master password contains non-latin characters!
+msg_incorrectinit=Table class was incorrectly initialized! Returned to initial state.
+msg_exception=An unhandled exception occurred :( But you can try to run the command again!
