The second part of implementation of the protection system.
Does not include protection for changing entries.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -108,3 +108,20 @@ msg_slashmasterpass=Unfortunately, master password cannot begin with "/"!
 msg_nonlatin=Master password contains non-latin characters!
 msg_incorrectinit=Table class was incorrectly initialized! Returned to initial state.
 msg_exception=An unhandled exception occurred :( But you can try to run the command again!
+msg_success=Success!
+msg_invalidpass=Invalid password!
+msg_openfail=Failed to open the file!
+msg_verfail=Unfortunately, this version of the file is not supported!
+msg_filecorrupted=This file is corrupted and cannot be opened!
+msg_emptytable=You cannot save a table without records!\n\
+If you save to an existing file that is no longer needed, you can close the app and delete it manually.\n\
+If you create a new file or open another file, the current file will be closed without saving.
+msg_errsave=The changes have not been saved!!! 
+msg_notsame=The current information will not be correctly decrypted when the file is opened next time!
+msg_errdirectory=Failed to save the file in the specified directory!\n\
+The file was saved in the application directory.
+msg_errencrypt=File encryption error.
+msg_errwrite=Error writing data to the file.
+msg_enternewdata=Enter new path and master password...
+msg_tabchar=The tab character is not allowed!
+msg_canceled=Canceled!
