The final part of implementation of the protection system.

--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -1,14 +1,14 @@
 help_add=add – add an entry to the table
 help_bt=bytag <tag> (bt <tag>) – search in the table by tag
 help_bt_eg=bytag <tag> (bt <tag>) – search in the table by tag (e.g. bt g)
-help_cp=copy <id> <note / login / password> (cp <id> <n / l / p>) – copy data from the entry
-help_cp_eg=copy <id> <note / login / password> (cp <id> <n / l / p>) – copy data from the entry (e.g. cp 7 n)
+help_cp=copy <ID> <note / login / password> (cp <ID> <n / l / p>) – copy data from the entry
+help_cp_eg=copy <ID> <note / login / password> (cp <ID> <n / l / p>) – copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
 note = n , login = l , password = p , tag = t
-help_del=delete <id> (del <id>) – delete an entry from the table
-help_del_eg=delete <id> (del <id>) – delete an entry from the table (e.g. del 14)
-help_ed=edit <id> <note / login / password / tag> <new data> (ed <id> <n / l / p / t> <new data>) – change data in the entry
-help_ed_eg=edit <id> <note / login / password / tag> <new data> (ed <id> <n / l / p / t> <new data>) – change data in the entry (e.g. ed 2 l admin2)
+help_del=delete <ID> (del <ID>) – delete an entry from the table
+help_del_eg=delete <ID> (del <ID>) – delete an entry from the table (e.g. del 14)
+help_ed=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) – change data in the entry
+help_ed_eg=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) – change data in the entry (e.g. ed 2 l admin2)
 help_h=h (help / commands) - list of all commands
 help_title_files=## Working with passtable files ##
 help_heg=heg - list of all commands with examples
@@ -20,8 +20,8 @@ help_rollback=rollback – roll back to the last saved version of the file
 help_s=search <data> (s <data>) – search in the table by note and login
 help_s_eg=search <data> (s <data>) – search in the table by note and login (e.g. s portal)
 help_saveas=saveas – save changes to the file (with changing the file path and master password)
-help_shp=showpassword <id> (shp <id>) – show the password of the selected entry
-help_shp_eg=showpassword <id> (shp <id>) – show the password of the selected entry (e.g. shp 9)
+help_shp=showpassword <ID> (shp <ID>) – show the password of the selected entry
+help_shp_eg=showpassword <ID> (shp <ID>) – show the password of the selected entry (e.g. shp 9)
 help_sv=save (sv) – save changes to the file (without changing the file path and master password)
 help_t=table (t) – show the table
 help_tags=tags: \
@@ -125,3 +125,8 @@ msg_errwrite=Error writing data to the file.
 msg_enternewdata=Enter new path and master password...
 msg_tabchar=The tab character is not allowed!
 msg_canceled=Canceled!
+msg_notag=The entry was not assigned tag.
+msg_noentry=There is no entry with this ID!
+msg_copied=Copied!
+msg_emptysearch=Empty search query!
+msg_unknowntag=Unknown tag.
