--- a/jar-app/build.gradle
+++ b/jar-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.ladsers.passtable'
-version '0.9.0.JVM'
+version '0.9.1.JVM'
 
 repositories {
     mavenCentral()
@@ -21,4 +21,18 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+jar {
+    baseName = 'Passtable'
+
+    manifest {
+        attributes 'Main-Class': 'MainKt'
+    }
+
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
+
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
