--- a/jar-app/src/main/resources/text.properties
+++ b/jar-app/src/main/resources/text.properties
@@ -1,29 +1,29 @@
-help_add=add – add an entry to the table
-help_bt=bytag <tag> (bt <tag>) – search in the table by tag
-help_bt_eg=bytag <tag> (bt <tag>) – search in the table by tag (e.g. bt g)
-help_cp=copy <ID> <note / login / password> (cp <ID> <n / l / p>) – copy data from the entry
-help_cp_eg=copy <ID> <note / login / password> (cp <ID> <n / l / p>) – copy data from the entry (e.g. cp 7 n)
+help_add=add - add an entry to the table
+help_bt=bytag <tag> (bt <tag>) - search in the table by tag
+help_bt_eg=bytag <tag> (bt <tag>) - search in the table by tag (e.g. bt g)
+help_cp=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry
+help_cp_eg=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
 note = n , login = l , password = p , tag = t
-help_del=delete <ID> (del <ID>) – delete an entry from the table
-help_del_eg=delete <ID> (del <ID>) – delete an entry from the table (e.g. del 14)
-help_ed=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) – change data in the entry
-help_ed_eg=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) – change data in the entry (e.g. ed 2 l admin2)
+help_del=delete <ID> (del <ID>) - delete an entry from the table
+help_del_eg=delete <ID> (del <ID>) - delete an entry from the table (e.g. del 14)
+help_ed=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry
+help_ed_eg=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry (e.g. ed 2 l admin2)
 help_h=h (help / commands) - list of all commands
 help_title_files=## Working with passtable files ##
 help_heg=heg - list of all commands with examples
 help_language=en / ru - change message language (RU: сменить язык сообщений)
-help_new=new – create a new file
-help_op=open <path> (op <path>) – open an existing file
-help_op_eg=open <path> (op <path>) – open an existing file (e.g. op file1)
-help_rollback=rollback – roll back to the last saved version of the file
-help_s=search <data> (s <data>) – search in the table by note and login
-help_s_eg=search <data> (s <data>) – search in the table by note and login (e.g. s portal)
-help_saveas=saveas – save changes to the file (with changing the file path and master password)
-help_shp=showpassword <ID> (shp <ID>) – show the password of the selected entry
-help_shp_eg=showpassword <ID> (shp <ID>) – show the password of the selected entry (e.g. shp 9)
-help_sv=save (sv) – save changes to the file (without changing the file path and master password)
-help_t=table (t) – show the table
+help_new=new - create a new file
+help_op=open <path> (op <path>) - open an existing file
+help_op_eg=open <path> (op <path>) - open an existing file (e.g. op file1)
+help_rollback=rollback - roll back to the last saved version of the file
+help_s=search <data> (s <data>) - search in the table by note and login
+help_s_eg=search <data> (s <data>) - search in the table by note and login (e.g. s portal)
+help_saveas=saveas - save changes to the file (with changing the file path and master password)
+help_shp=showpassword <ID> (shp <ID>) - show the password of the selected entry
+help_shp_eg=showpassword <ID> (shp <ID>) - show the password of the selected entry (e.g. shp 9)
+help_sv=save (sv) - save changes to the file (without changing the file path and master password)
+help_t=table (t) - show the table
 help_tags=tags: \
 red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Working with the table ##
@@ -84,7 +84,7 @@ edit_login=Enter login:
 edit_password=Enter password: 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command.
-help_q=quit (q) – quit the application
+help_q=quit (q) - quit the application
 c_quit=quit
 c_q=q
 title_id=ID
@@ -130,3 +130,5 @@ msg_noentry=There is no entry with this ID!
 msg_copied=Copied!
 msg_emptysearch=Empty search query!
 msg_unknowntag=Unknown tag.
+c_license=license
+help_license=license - view the license
