--- a/jar-app/build.gradle
+++ b/jar-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.ladsers.passtable'
-version '0.9.3.JVM'
+version '0.9.4.JVM'
 
 repositories {
     mavenCentral()
@@ -12,7 +12,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+    implementation "org.bouncycastle:bcpkix-jdk15on:1.66"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
