Added message about non-latin characters for Windows.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -78,7 +78,6 @@ msg_unknown=Unknown command.
 msg_namefile=Enter name or path: 
 msg_masterpass=Enter master password (only latin): 
 msg_noentries=< There are no entries >
-msg_notable=First open the table or create a new one.
 edit_note=Enter note: 
 edit_login=Enter login: 
 edit_password=Enter password: 
@@ -132,3 +131,6 @@ msg_emptysearch=Empty search query!
 msg_unknowntag=Unknown tag.
 c_license=license
 help_license=license - view the license
+msg_windows=Warning!\n\
+The application in os "Windows" may not work correctly with non-latin characters!\n\
+It is recommended to use Passtable for Windows.
