Simplified commands in English.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -1,12 +1,12 @@
-help_add=add - add an entry to the table
+help_add=add (a) - add an entry to the table
 help_bt=bytag <tag> (bt <tag>) - search in the table by tag
 help_bt_eg=bytag <tag> (bt <tag>) - search in the table by tag (e.g. bt g)
 help_cp=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry
 help_cp_eg=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
 note = n , login = l , password = p , tag = t
-help_del=delete <ID> (del <ID>) - delete an entry from the table
-help_del_eg=delete <ID> (del <ID>) - delete an entry from the table (e.g. del 14)
+help_del=remove <ID> (rm <ID>) - delete an entry from the table
+help_del_eg=remove <ID> (rm <ID>) - delete an entry from the table (e.g. rm 14)
 help_ed=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry
 help_ed_eg=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry (e.g. ed 2 l admin2)
 help_h=h (help / commands) - list of all commands
@@ -20,8 +20,6 @@ help_rollback=rollback - roll back to the last saved version of the file
 help_s=search <data> (s <data>) - search in the table by note and login
 help_s_eg=search <data> (s <data>) - search in the table by note and login (e.g. s portal)
 help_saveas=saveas - save changes to the file (with changing the file path and master password)
-help_shp=showpassword <ID> (shp <ID>) - show the password of the selected entry
-help_shp_eg=showpassword <ID> (shp <ID>) - show the password of the selected entry (e.g. shp 9)
 help_sv=save (sv) - save changes to the file (without changing the file path and master password)
 help_t=table (t) - show the table
 help_tags=tags: \
@@ -42,12 +40,10 @@ c_rollback=rollback
 c_add=add
 c_edit=edit
 c_ed=ed
-c_delete=delete
-c_del=del
+c_delete=remove
+c_del=rm
 c_copy=copy
 c_cp=cp
-c_showpassword=showpassword
-c_shp=shp
 c_search=search
 c_s=s
 c_bytag=bytag
@@ -72,7 +68,7 @@ tg_yellow=yellow
 tg_y=y
 tg_purple=purple
 tg_p=p
-c_add2=add
+c_add2=a
 msg_lang=English is set for messages.
 msg_unknown=Unknown command.
 msg_namefile=Enter name or path: 
@@ -134,3 +130,7 @@ help_license=license - view the license
 msg_windows=Warning!\n\
 The application in os "Windows" may not work correctly with non-latin characters!\n\
 It is recommended to use Passtable for Windows.
+c_password=password
+c_ps=ps
+help_ps=password <ID> (ps <ID>) - show the password of the selected entry
+help_ps_eg=password <ID> (ps <ID>) - show the password of the selected entry (e.g. ps 9)
