Minor fixes for the command list. Command list has been translated into Russian.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -1,27 +1,27 @@
-help_add=add (a) - add an entry to the table
-help_bt=bytag <tag> (bt <tag>) - search in the table by tag
-help_bt_eg=bytag <tag> (bt <tag>) - search in the table by tag (e.g. bt g)
-help_cp=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry
-help_cp_eg=copy <ID> <note / login / password> (cp <ID> <n / l / p>) - copy data from the entry (e.g. cp 7 n)
+help_add=add [a] - add an entry to the table
+help_bt=bytag <tag> [bt <tag>] - search in the table by tag
+help_bt_eg=bytag <tag> [bt <tag>] - search in the table by tag (e.g. bt g)
+help_cp=copy <ID> <note / login / password> [cp <ID> <n / l / p>] - copy data from the entry
+help_cp_eg=copy <ID> <note / login / password> [cp <ID> <n / l / p>] - copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
 note = n , login = l , password = p , tag = t
-help_del=remove <ID> (rm <ID>) - delete an entry from the table
-help_del_eg=remove <ID> (rm <ID>) - delete an entry from the table (e.g. rm 14)
-help_ed=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry
-help_ed_eg=edit <ID> <note / login / password / tag> <new data> (ed <ID> <n / l / p / t> <new data>) - change data in the entry (e.g. ed 2 l admin2)
-help_h=h (help / commands) - list of all commands
+help_del=remove <ID> [rm <ID>] - delete an entry from the table
+help_del_eg=remove <ID> [rm <ID>] - delete an entry from the table (e.g. rm 14)
+help_ed=edit <ID> <note / login / password / tag> <new data> [ed <ID> <n / l / p / t> <new data>] - change data in the entry
+help_ed_eg=edit <ID> <note / login / password / tag> <new data> [ed <ID> <n / l / p / t> <new data>] - change data in the entry (e.g. ed 2 l admin2)
+help_h=h [help / commands] - list of all commands
 help_title_files=## Working with passtable files ##
 help_heg=heg - list of all commands with examples
 help_language=en / ru - change message language (RU: сменить язык сообщений)
 help_new=new - create a new file
-help_op=open <path> (op <path>) - open an existing file
-help_op_eg=open <path> (op <path>) - open an existing file (e.g. op file1)
+help_op=open <path> [op <path>] - open an existing file
+help_op_eg=open <path> [op <path>] - open an existing file (e.g. op file1)
 help_rollback=rollback - roll back to the last saved version of the file
-help_s=search <data> (s <data>) - search in the table by note and login
-help_s_eg=search <data> (s <data>) - search in the table by note and login (e.g. s portal)
+help_s=search <data> [s <data>] - search in the table by note and login
+help_s_eg=search <data> [s <data>] - search in the table by note and login (e.g. s portal)
 help_saveas=saveas - save changes to the file (with changing the file path and master password)
-help_sv=save (sv) - save changes to the file (without changing the file path and master password)
-help_t=table (t) - show the table
+help_sv=save [sv] - save changes to the file (without changing the file path and master password)
+help_t=table [t] - show the table
 help_tags=tags: \
 red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Working with the table ##
@@ -79,7 +79,7 @@ edit_login=Enter login:
 edit_password=Enter password: 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command.
-help_q=quit (q) - quit the application
+help_q=quit [q] - quit the application
 c_quit=quit
 c_q=q
 title_id=ID
@@ -132,5 +132,6 @@ The application in os "Windows" may not work correctly with non-latin characters
 It is recommended to use Passtable for Windows.
 c_password=password
 c_ps=ps
-help_ps=password <ID> (ps <ID>) - show the password of the selected entry
-help_ps_eg=password <ID> (ps <ID>) - show the password of the selected entry (e.g. ps 9)
+help_ps=password <ID> [ps <ID>] - show the password of the selected entry
+help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.g. ps 9)
+help_abbreviated=[..] - alternative version of the command
