Added Russian commands. Added hint for incorrect commands.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -69,8 +69,8 @@ tg_y=y
 tg_purple=purple
 tg_p=p
 c_add2=a
-msg_lang=English is set for messages.
-msg_unknown=Unknown command.
+msg_lang=English is set for messages and commands.
+msg_unknown=Unknown command. Type "h" to display a list of commands.
 msg_namefile=Enter name or path: 
 msg_masterpass=Enter master password (only latin): 
 msg_noentries=< There are no entries >
@@ -78,7 +78,7 @@ edit_note=Enter note:
 edit_login=Enter login: 
 edit_password=Enter password: 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
-msg_invalid=Invalid command.
+msg_invalid=Invalid command. Type "h" to display a list of commands.
 help_q=quit [q] - quit the application
 c_quit=quit
 c_q=q
