Minor fixes. JVM: The main development is over.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -128,7 +128,7 @@ msg_unknowntag=Unknown tag.
 c_license=license
 help_license=license - view the license
 msg_windows=Warning!\n\
-The application in os "Windows" may not work correctly with non-latin characters!\n\
+The application in OS "Windows" may not work correctly with non-latin characters!\n\
 It is recommended to use Passtable for Windows.
 c_password=password
 c_ps=ps
