Fixed bugs in the search.

--- a/kt-jvm/src/main/resources/text.properties
+++ b/kt-jvm/src/main/resources/text.properties
@@ -136,3 +136,4 @@ help_ps=password <ID> [ps <ID>] - show the password of the selected entry
 help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.g. ps 9)
 help_abbreviated=[..] - alternative version of the command
 msg_erradd=Canceled! Note is empty and/or login & password is empty.
+msg_nopass=Entry has no password!
