--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.bouncycastle:bcpkix-jdk15on:1.66"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+sourceSets {
+    main.java.srcDirs = ['core/src/main/kotlin']
 }
 
 compileKotlin {
