Improved verification of file path input and master password input (based on library functionality). Kotlin: 1.4.10 -> 1.5.0

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -72,7 +72,7 @@ c_add2=a
 msg_lang=English is set for messages and commands.
 msg_unknown=Unknown command. Type "h" to display a list of commands.
 msg_namefile=Enter name or path: 
-msg_masterpass=Enter master password (only latin): 
+msg_masterpass=Enter master password (A..z, numbers, symbols): 
 msg_noentries=< There are no entries >
 edit_note=Enter note: 
 edit_login=Enter login: 
@@ -97,10 +97,16 @@ c_no2=n
 c_cancel=cancel
 msg_saveornot=You have unsaved changes! Save it? (y / n / cancel)
 msg_emptynamefile=Path or file name cannot be empty!
-msg_charerror=File name must not contain the following characters: \\ / : * ? " < > |
+msg_charerror=File name must not contain the following characters: 
+msg_whitespacenamefile=File name must not start with whitespace character!
+msg_invalidwordnamefile=File name is invalid word for OS Windows!\n\
+Invalid words: 
+msg_longnamefile=File name is too long!
 msg_emptymasterpass=Master password cannot be empty!
 msg_slashmasterpass=Unfortunately, master password cannot begin with "/"!
-msg_nonlatin=Master password contains non-latin characters!
+msg_longmasterpass=Master password is too long (max. 32 chars)!
+msg_invalidcharmasterpass=Master password contains invalid character!\n\
+Allowed characters:
 msg_incorrectinit=Table class was incorrectly initialized! Returned to initial state.
 msg_exception=An unhandled exception occurred :( But you can try to run the command again!
 msg_success=Success!
@@ -137,3 +143,4 @@ help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.
 help_abbreviated=[..] - alternative version of the command
 msg_erradd=Canceled! Note is empty and/or login & password is empty.
 msg_nopass=Entry has no password!
+key_space=space
