--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -144,3 +144,17 @@ help_abbreviated=[..] - alternative version of the command
 msg_erradd=Canceled! Note is empty and/or login & password is empty.
 msg_nopass=Entry has no password!
 key_space=space
+header_version=version: 
+header_projectpage=Project page: 
+header_projectrepo=Project repo: 
+header_h=Type "h" to display a list of commands.
+header_ru=Type "ru" to change language to Russian (Русский язык).
+header_license=Type "license" to view the license.
+msg_checkingupdates=Checking for updates...
+msg_uptodate=Application is up to date.
+msg_failconnect=Failed: could not connect to the server!
+msg_newversion=New version available! Do you want to download? (y/n)
+msg_downloading=Downloading...
+msg_dlsuccess1=Success! Open
+msg_dlsuccess2=in the same directory to continue working.
+msg_dlfail=Failed to download!
