Improved table display. Added command "show".

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -158,3 +158,10 @@ msg_downloading=Downloading...
 msg_dlsuccess1=Success! Open
 msg_dlsuccess2=in the same directory to continue working.
 msg_dlfail=Failed to download!
+msg_showcontents=Type "show <ID>" to show all contents of the entry.
+msg_showpassword1=type "ps
+msg_showpassword2=" to show the password
+c_show=show
+c_sh=sh
+help_sh=show <ID> [sh <ID>] - show all contents of the selected entry
+help_sh_eg=show <ID> [sh <ID>] - show all contents of the selected entry (e.g. sh 12)
