Added Log'n'Pass system.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -142,6 +142,7 @@ help_ps=password <ID> [ps <ID>] - show the password of the selected entry
 help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.g. ps 9)
 help_abbreviated=[..] - alternative version of the command
 msg_erradd=Canceled! Note is empty and/or login & password is empty.
+msg_nologin=Entry has no login!
 msg_nopass=Entry has no password!
 key_space=space
 header_version=version: 
@@ -165,3 +166,9 @@ c_show=show
 c_sh=sh
 help_sh=show <ID> [sh <ID>] - show all contents of the selected entry
 help_sh_eg=show <ID> [sh <ID>] - show all contents of the selected entry (e.g. sh 12)
+c_lnp=lnp
+help_lnp=lnp <ID> - Log'n'Pass (copy login, then password)
+help_lnp_eg=lnp <ID> - Log'n'Pass (copy login, then password) (e.g. lnp 1)
+msg_lnpcanceled=Canceled! Entry has only note!
+msg_lnplogin=Login was copied! Press Enter to copy the password.
+msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
