Copying to clipboard is made safe.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -172,3 +172,5 @@ help_lnp_eg=lnp <ID> - Log'n'Pass (copy login, then password) (e.g. lnp 1)
 msg_lnpcanceled=Canceled! Entry has only note!
 msg_lnplogin=Login was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
+msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
+msg_errlnp=Log'n'Pass is unavailable! Reason:
