--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -154,7 +154,7 @@ header_license=Type "license" to view the license.
 msg_checkingupdates=Checking for updates...
 msg_uptodate=Application is up to date.
 msg_failconnect=Failed: could not connect to the server!
-msg_newversion=New version available! Do you want to download? (y/n)
+msg_newversion=New version available! Do you want to download? [y/N]
 msg_downloading=Downloading...
 msg_dlsuccess1=Success! Open
 msg_dlsuccess2=in the same directory to continue working.
