--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -72,11 +72,15 @@ c_add2=a
 msg_lang=English is set for messages and commands.
 msg_unknown=Unknown command. Type "h" to display a list of commands.
 msg_namefile=Enter name or path: 
-msg_masterpass=Enter master password (A..z, numbers, symbols): 
+msg_masterpass=Enter master password: 
+msg_masterpassnew=Enter master password (A..z, numbers, symbols): 
+msg_confirm=Confirm: 
+msg_dontmatch=Passwords don't match! Enter password again.
 msg_noentries=< There are no entries >
 edit_note=Enter note: 
 edit_login=Enter login: 
 edit_password=Enter password: 
+edit_confirm=Confirm (leave blank to skip): 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command. Type "h" to display a list of commands.
 help_q=quit [q] - quit the application
@@ -174,3 +178,4 @@ msg_lnplogin=Login was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
 msg_errlnp=Log'n'Pass is unavailable! Reason:
+msg_
