Refactoring: Master password -> Primary password.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -19,8 +19,8 @@ help_op_eg=open <path> [op <path>] - open an existing file (e.g. op file1)
 help_rollback=rollback - roll back to the last saved version of the file
 help_s=search <data> [s <data>] - search in the table by note and login
 help_s_eg=search <data> [s <data>] - search in the table by note and login (e.g. s portal)
-help_saveas=saveas - save changes to the file (with changing the file path and master password)
-help_sv=save [sv] - save changes to the file (without changing the file path and master password)
+help_saveas=saveas - save changes to the file (with changing the file path and the primary password)
+help_sv=save [sv] - save changes to the file (without changing the file path and the primary password)
 help_t=table [t] - show the table
 help_tags=tags: \
 red = r , green = g , blue = b , yellow = y , purple = p
@@ -72,8 +72,8 @@ c_add2=a
 msg_lang=English is set for messages and commands.
 msg_unknown=Unknown command. Type "h" to display a list of commands.
 msg_namefile=Enter name or path: 
-msg_masterpass=Enter master password: 
-msg_masterpassnew=Enter master password (A..z, numbers, symbols): 
+msg_primarypassword=Enter primary password: 
+msg_primarypasswordnew=Enter primary password (A..z, numbers, symbols): 
 msg_confirm=Confirm: 
 msg_dontmatch=Passwords don't match! Enter password again.
 msg_noentries=< There are no entries >
@@ -106,10 +106,10 @@ msg_whitespacenamefile=File name must not start with whitespace character!
 msg_invalidwordnamefile=File name is invalid word for OS Windows!\n\
 Invalid words: 
 msg_longnamefile=File name is too long!
-msg_emptymasterpass=Master password cannot be empty!
-msg_slashmasterpass=Unfortunately, master password cannot begin with "/"!
-msg_longmasterpass=Master password is too long (max. 32 chars)!
-msg_invalidcharmasterpass=Master password contains invalid character!\n\
+msg_emptyprimarypassword=Primary password cannot be empty!
+msg_slashprimarypassword=Unfortunately, primary password cannot begin with "/"!
+msg_longprimarypassword=Primary password is too long (max. 32 chars)!
+msg_invalidcharprimarypassword=Primary password contains invalid character!\n\
 Allowed characters:
 msg_incorrectinit=Table class was incorrectly initialized! Returned to initial state.
 msg_exception=An unhandled exception occurred :( But you can try to run the command again!
@@ -127,7 +127,7 @@ msg_errdirectory=Failed to save the file in the specified directory!\n\
 The file was saved in the application directory.
 msg_errencrypt=File encryption error.
 msg_errwrite=Error writing data to the file.
-msg_enternewdata=Enter new path and master password...
+msg_enternewdata=Enter new path and primary password...
 msg_tabchar=The tab character is not allowed!
 msg_canceled=Canceled!
 msg_notag=The entry was not assigned tag.
