Refactoring: Login -> Username.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,14 +1,14 @@
 help_add=add [a] - add an entry to the table
 help_bt=bytag <tag> [bt <tag>] - search in the table by tag
 help_bt_eg=bytag <tag> [bt <tag>] - search in the table by tag (e.g. bt g)
-help_cp=copy <ID> <note / login / password> [cp <ID> <n / l / p>] - copy data from the entry
-help_cp_eg=copy <ID> <note / login / password> [cp <ID> <n / l / p>] - copy data from the entry (e.g. cp 7 n)
+help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry
+help_cp_eg=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry (e.g. cp 7 n)
 help_datatypes=data types: \
-note = n , login = l , password = p , tag = t
+note = n , username = u , password = p , tag = t
 help_del=remove <ID> [rm <ID>] - delete an entry from the table
 help_del_eg=remove <ID> [rm <ID>] - delete an entry from the table (e.g. rm 14)
-help_ed=edit <ID> <note / login / password / tag> <new data> [ed <ID> <n / l / p / t> <new data>] - change data in the entry
-help_ed_eg=edit <ID> <note / login / password / tag> <new data> [ed <ID> <n / l / p / t> <new data>] - change data in the entry (e.g. ed 2 l admin2)
+help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry
+help_ed_eg=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry (e.g. ed 2 l admin2)
 help_h=h [help / commands] - list of all commands
 help_title_files=## Working with passtable files ##
 help_heg=heg - list of all commands with examples
@@ -17,8 +17,8 @@ help_new=new - create a new file
 help_op=open <path> [op <path>] - open an existing file
 help_op_eg=open <path> [op <path>] - open an existing file (e.g. op file1)
 help_rollback=rollback - roll back to the last saved version of the file
-help_s=search <data> [s <data>] - search in the table by note and login
-help_s_eg=search <data> [s <data>] - search in the table by note and login (e.g. s portal)
+help_s=search <data> [s <data>] - search in the table by notes and usernames
+help_s_eg=search <data> [s <data>] - search in the table by notes and usernames (e.g. s portal)
 help_saveas=saveas - save changes to the file (with changing the file path and the primary password)
 help_sv=save [sv] - save changes to the file (without changing the file path and the primary password)
 help_t=table [t] - show the table
@@ -52,8 +52,8 @@ c_table=table
 c_t=t
 dt_note=note
 dt_n=n
-dt_login=login
-dt_l=l
+dt_username=username
+dt_u=u
 dt_password=password
 dt_p=p
 dt_tag=tag
@@ -78,7 +78,7 @@ msg_confirm=Confirm:
 msg_dontmatch=Passwords don't match! Enter password again.
 msg_noentries=< There are no entries >
 edit_note=Enter note: 
-edit_login=Enter login: 
+edit_username=Enter username: 
 edit_password=Enter password: 
 edit_confirm=Confirm (leave blank to skip): 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
@@ -88,7 +88,7 @@ c_quit=quit
 c_q=q
 title_id=ID
 title_note=Note
-title_login=Login
+title_username=Username
 title_password=Password
 title_tag=Tag
 yes=yes
@@ -145,8 +145,8 @@ c_ps=ps
 help_ps=password <ID> [ps <ID>] - show the password of the selected entry
 help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.g. ps 9)
 help_abbreviated=[..] - alternative version of the command
-msg_erradd=Canceled! Note is empty and/or login & password is empty.
-msg_nologin=Entry has no login!
+msg_erradd=Canceled! Note is empty and/or username & password is empty.
+msg_nousername=Entry has no username!
 msg_nopass=Entry has no password!
 key_space=space
 header_version=version: 
@@ -171,11 +171,10 @@ c_sh=sh
 help_sh=show <ID> [sh <ID>] - show all contents of the selected entry
 help_sh_eg=show <ID> [sh <ID>] - show all contents of the selected entry (e.g. sh 12)
 c_lnp=lnp
-help_lnp=lnp <ID> - Log'n'Pass (copy login, then password)
-help_lnp_eg=lnp <ID> - Log'n'Pass (copy login, then password) (e.g. lnp 1)
+help_lnp=lnp <ID> - Log'n'Pass (copy username, then password)
+help_lnp_eg=lnp <ID> - Log'n'Pass (copy username, then password) (e.g. lnp 1)
 msg_lnpcanceled=Canceled! Entry has only note!
-msg_lnplogin=Login was copied! Press Enter to copy the password.
+msg_lnpusername=Username was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
 msg_errlnp=Log'n'Pass is unavailable! Reason:
-msg_
