Improved work with data on Windows and macOS. Improved command handler.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -28,6 +28,9 @@ help_title_table=## Working with the table ##
 help_title_abb=## Abbreviations ##
 c_heg=heg
 c_help=help
+c_about=about
+c_version=version
+c_v=v
 c_en=en
 c_ru=ru
 c_new=new
@@ -50,6 +53,8 @@ c_bytag=bytag
 c_bt=bt
 c_table=table
 c_t=t
+c_clear=clear
+c_cls=cls
 dt_note=note
 dt_n=n
 dt_username=username
@@ -76,10 +81,13 @@ msg_primarypassword=Enter primary password:
 msg_primarypasswordnew=Enter primary password (A..z, numbers, symbols): 
 msg_confirm=Confirm: 
 msg_dontmatch=Passwords don't match! Enter password again.
-msg_noentries=< There are no entries >
+msg_noentries=* There are no entries *
 edit_note=Enter note: 
 edit_username=Enter username: 
 edit_password=Enter password: 
+edit_notelatin=Enter note (A..z, numbers, symbols): 
+edit_usernamelatin=Enter username (A..z, numbers, symbols): 
+edit_passwordlatin=Enter password (A..z, numbers, symbols): 
 edit_confirm=Confirm (leave blank to skip): 
 edit_tag=Add a tag? (red / green / blue / yellow / purple): 
 msg_invalid=Invalid command. Type "h" to display a list of commands.
@@ -137,9 +145,7 @@ msg_emptysearch=Empty search query!
 msg_unknowntag=Unknown tag.
 c_license=license
 help_license=license - view the license
-msg_windows=Warning!\n\
-The application in OS "Windows" may not work correctly with non-latin characters!\n\
-It is recommended to use Passtable for Windows.
+msg_windows=Unfortunately, adding items containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
 c_password=password
 c_ps=ps
 help_ps=password <ID> [ps <ID>] - show the password of the selected entry
@@ -178,3 +184,4 @@ msg_lnpusername=Username was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
 msg_errlnp=Log'n'Pass is unavailable! Reason:
+msg_passwordmac=In macOS, you cannot add an item with a password containing non-latin characters. However, you can set any password when editing an item.
