Improved printCommandsList(): now requires fewer help lines. Implemented additional methods for TextBundle.

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,24 +1,18 @@
 help_add=add [a] - add an entry to the table
-help_bt=bytag <tag> [bt <tag>] - search in the table by tag
-help_bt_eg=bytag <tag> [bt <tag>] - search in the table by tag (e.g. bt g)
-help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry
-help_cp_eg=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry (e.g. cp 7 n)
+help_bt=bytag <tag> [bt <tag>] - search in the table by tag %s
+help_cp=copy <ID> <note / username / password> [cp <ID> <n / u / p>] - copy data from the entry %s
 help_datatypes=data types: \
 note = n , username = u , password = p , tag = t
-help_del=remove <ID> [rm <ID>] - delete an entry from the table
-help_del_eg=remove <ID> [rm <ID>] - delete an entry from the table (e.g. rm 14)
-help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry
-help_ed_eg=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry (e.g. ed 2 l admin2)
+help_del=delete <ID> [del <ID>] - delete an entry from the table %s
+help_ed=edit <ID> <note / username / password / tag> <new data> [ed <ID> <n / u / p / t> <new data>] - change data in the entry %s
 help_h=h [help / commands] - list of all commands
 help_title_files=## Working with passtable files ##
 help_heg=heg - list of all commands with examples
 help_language=en / ru - change message language (RU: сменить язык сообщений)
 help_new=new - create a new file
-help_op=open <path> [op <path>] - open an existing file
-help_op_eg=open <path> [op <path>] - open an existing file (e.g. op file1)
+help_op=open <path> [op <path>] - open an existing file %s
 help_rollback=rollback - roll back to the last saved version of the file
-help_s=search <data> [s <data>] - search in the table by notes and usernames
-help_s_eg=search <data> [s <data>] - search in the table by notes and usernames (e.g. s portal)
+help_s=search <data> [s <data>] - search in the table by notes and usernames %s
 help_saveas=saveas - save changes to the file (with changing the file path and the primary password)
 help_sv=save [sv] - save changes to the file (without changing the file path and the primary password)
 help_t=table [t] - show the table
@@ -43,8 +37,8 @@ c_rollback=rollback
 c_add=add
 c_edit=edit
 c_ed=ed
-c_delete=remove
-c_del=rm
+c_delete=delete
+c_del=del
 c_copy=copy
 c_cp=cp
 c_search=search
@@ -148,8 +142,7 @@ help_license=license - view the license
 msg_windows=Unfortunately, adding items containing non-latin characters through this app in Windows is unsafe. Use the app Passtable for Windows to do this.
 c_password=password
 c_ps=ps
-help_ps=password <ID> [ps <ID>] - show the password of the selected entry
-help_ps_eg=password <ID> [ps <ID>] - show the password of the selected entry (e.g. ps 9)
+help_ps=password <ID> [ps <ID>] - show the password of the selected entry %s
 help_abbreviated=[..] - alternative version of the command
 msg_erradd=Canceled! Note is empty and/or username & password is empty.
 msg_nousername=Entry has no username!
@@ -174,14 +167,13 @@ msg_showpassword1=type "ps
 msg_showpassword2=" to show the password
 c_show=show
 c_sh=sh
-help_sh=show <ID> [sh <ID>] - show all contents of the selected entry
-help_sh_eg=show <ID> [sh <ID>] - show all contents of the selected entry (e.g. sh 12)
+help_sh=show <ID> [sh <ID>] - show all contents of the selected entry %s
 c_lnp=lnp
-help_lnp=lnp <ID> - Log'n'Pass (copy username, then password)
-help_lnp_eg=lnp <ID> - Log'n'Pass (copy username, then password) (e.g. lnp 1)
+help_lnp=lnp <ID> - Log'n'Pass (copy username, then password) %s
 msg_lnpcanceled=Canceled! Entry has only note!
 msg_lnpusername=Username was copied! Press Enter to copy the password.
 msg_lnppassword=Password was copied! Press Enter to clear the clipboard and continue.
 msg_errcopy=This OS does not allow applications to write data to the clipboard, or the necessary JRE libraries for this action were not found (possible reason: only package "openjdk-8-jre-headless" is installed, install the full package "openjdk-8-jre").
 msg_errlnp=Log'n'Pass is unavailable! Reason:
 msg_passwordmac=In macOS, you cannot add an item with a password containing non-latin characters. However, you can set any password when editing an item.
+help_example=(e.g. %s)
